# QPlayer-Wrapper

./: .gitignore  CMakeLists copy.txt  CMakeLists.txt  Makefile  README.md  README.rst  main.ipynb  main.py  requirements.txt  setup.py  simulation.res  teddddt.json  test.json
.github/workflows/: python-app.yml
core/: qplayer_wrapper.cpp
docs/: conf.py
qplayer/: QResult.py  __init__.py  core.cpp  run_qplayer.py
src/: __init__.py  core.cpp  qplayer.py  wrapper.cpp
src/wrapper/: wrapper.cpp
tests/: context.py  test_advanced.py  test_basic.py  test_grover.py  test_install.py  test_run_qplayer.py
tests/general/: grover.py
tests/verification/: install_test.py
